# craft_inter

./: .gitignore  README.md
clox/: Makefile  chunk.c  chunk.h  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  meson.build  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
jlox/: CMakeLists.txt
jlox/include/: alias.hpp  ast_printer.hpp  clock_callable.hpp  environment.hpp  expr.hpp  interpreter.hpp  literal_value.hpp  lox.hpp  lox_callable.hpp  lox_class.hpp  lox_function.hpp  lox_instance.hpp  object.hpp  object_utils.hpp  parser.hpp  resolver.hpp  return.hpp  runtime_error.hpp  scaner.hpp  scanner.hpp  stmt.hpp  token.hpp  token_type.hpp
jlox/notes/: note.typ
jlox/src/: ast_printer.cpp  environment.cpp  expr.cpp  interpreter.cpp  lox.cpp  lox_class.cpp  lox_function.cpp  lox_instance.cpp  main.cpp  object_utils.cpp  parser.cpp  resolver.cpp  return.cpp  runtime_error.cpp  scanner.cpp  stmt.cpp  token.cpp
jlox/tool/: GenerateAst.py  expr.hpp
